aob/aloow-space1-to-space2.yaml
## https://killercoda.com/killer-shell-cks/scenario/networkpolicy-namespace-communication
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: space1
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: space2
  policyTypes:
  - Egress
